# pvq_manipulation

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
pvq_manipulation/: Example_Notebook.ipynb
pvq_manipulation/helper/: characters.yaml  creapy_wrapper.py  manipulation_fkt.py  moving_batch_norm.py  notebook_helper.py  ode_solver.py  probability_paths.py  utils.py  vad.py
pvq_manipulation/models/: ffjord.py  flow_matching.py  hubert.py  normalizing_flows.py  ode_functions.py  vits.py
pvq_manipulation/train_example/: README.md  flow_matching_example.ipynb  normalizing_flow.ipynb  train.py
pvq_manipulation/train_example/configs/: config_flow_speech_manipulation.yaml  config_toy_example.yaml  config_toy_example_flow_matching.yaml
