[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvq_manipulation"
version = "0.0.1"
description = "Audio and speech manipulation tools"
authors = [
    { name = "Department of Communications Engineering, Paderborn University", email = "sek@nt.upb.de" }
]
license = { text = "MIT" }
keywords = ["audio", "speech"]

dependencies = [
    "torchdiffeq",
    "padertorch",
    "onnxruntime",
    "ipywidgets",
    "ipykernel",
    "hydra-core",
    "PyYAML==6.0.1",
    "notebook",
    "coqui-tts",
    "transformers<5.1.0",
    "torchaudio",
    "torchcodec",
]

[project.optional-dependencies]
legacy = [
    "creapy @ git+https://gitlab.tugraz.at/speech/creapy.git"
]

[tool.setuptools.packages.find]
where = ["."]

